# lib/api-spec/openapi.yaml
@@ -65,6 +65,10 @@ paths:
           in: query
           schema:
             type: string
+        - name: city
+          in: query
+          schema:
+            type: string
         - name: page
           in: query
           schema:
@@ -182,6 +186,10 @@ paths:
           schema:
             type: string
         - name: category
+          in: query
+          schema:
+            type: string
+        - name: city
           in: query
           schema:
             type: string
